--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@ DB_ADMIN_PASSWORD=adminpass
 
 DB_HOST=localhost
 DB_PORT=5432
-DB_Name=ordersdb    # NOTE the capital N: DB_Name
-DB_USER=myuser
-DB_PASSWORD=userpass
+DB_NAME=ordersdb
+DB_USER=myadmin
+DB_PASSWORD=mypass
+
