--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=foodndeliv
 spring.data.rest.base-path=/api
 
 # PostgreSQL 
-spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_Name:ordersdb}
+spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:ordersdb}
 spring.datasource.username=${DB_USER:myadmin}
 spring.datasource.password=${DB_PASSWORD}
 
@@ -38,11 +38,24 @@ otel.resource.attributes.service.namespace=example.org
 #keycloak
 keycloak.server-url=http://${IAM_HOST:my-keycloak}:${IAM_PORT:80}
 keycloak.realm=master
-keycloak.client-id=admin-cli
+keycloak.client-id=foodndeliv-api
 keycloak.client-secret=${IAM_CLIENT_SECRET}
 keycloak.username=admin                  
 keycloak.password=${IAM_PASSWORD}
 keycloak.target-realm=fnd
+
+# OAuth2 client registration (unchanged client id/secret/scope)
+spring.security.oauth2.client.registration.keycloak.client-id=foodndeliv-app
+spring.security.oauth2.client.registration.keycloak.client-secret=DuHJSuzJuCPOxvVpM2xZR5WtUfR4tqxM
+spring.security.oauth2.client.registration.keycloak.scope=openid,profile,email
+spring.security.oauth2.client.registration.keycloak.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.keycloak.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
+
+# Provider now points to localhost realm issuer
+spring.security.oauth2.client.provider.keycloak.issuer-uri=http://localhost:8083/realms/fnd
+spring.security.oauth2.client.provider.keycloak.user-name-attribute=preferred_username
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8083/realms/fnd
+
 
 
 
