task 2a with toggle complete.

--- a/k8s/db-app-secret.yaml
+++ b/k8s/db-app-secret.yaml
@@ -2,7 +2,8 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: db-app-secret
+  namespace: fnd
 type: Opaque
 stringData:
-  DB_USER: myuser
-  DB_PASSWORD: userpass
+  DB_USER: myadmin
+  DB_PASSWORD: mypass
