--- a/k8s/postgres.yaml
+++ b/k8s/postgres.yaml
@@ -2,39 +2,42 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: postgres
+  namespace: fnd
 spec:
   replicas: 1
-  selector: { matchLabels: { app: postgres } }
+  selector:
+    matchLabels:
+      app: postgres
   template:
-    metadata: { labels: { app: postgres } }
+    metadata:
+      labels:
+        app: postgres
     spec:
       containers:
         - name: postgres
-          image: postgres:15
-          ports: [ { containerPort: 5432 } ]
-          env:
-            - name: POSTGRES_DB
-              valueFrom: { configMapKeyRef: { name: db-config, key: DB_Name } }
-            - name: POSTGRES_USER
-              valueFrom: { secretKeyRef: { name: db-super-secret, key: POSTGRES_USER } }
-            - name: POSTGRES_PASSWORD
-              valueFrom: { secretKeyRef: { name: db-super-secret, key: POSTGRES_PASSWORD } }
+          image: postgres:16
+          ports:
+            - containerPort: 5432
+          envFrom:
+            - secretRef:
+                name: db-app-secret
+            - configMapRef:
+                name: db-config
           volumeMounts:
-            - { name: pgdata, mountPath: /var/lib/postgresql/data }
-            - { name: init,   mountPath: /docker-entrypoint-initdb.d }
+            - name: pgdata
+              mountPath: /var/lib/postgresql/data
       volumes:
         - name: pgdata
-          emptyDir: {}   # ephemeral for staging
-        - name: init
-          configMap: { name: postgres-init-sql }
+          emptyDir: {}
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: postgres
+  namespace: fnd
 spec:
-  selector: { app: postgres }
+  selector:
+    app: postgres
   ports:
-    - name: pg
-      port: 5432
+    - port: 5432
       targetPort: 5432
