--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -44,18 +44,12 @@ keycloak.username=admin
 keycloak.password=${IAM_PASSWORD}
 keycloak.target-realm=fnd
 
-# OAuth2 client registration (unchanged client id/secret/scope)
-spring.security.oauth2.client.registration.keycloak.client-id=foodndeliv-app
-spring.security.oauth2.client.registration.keycloak.client-secret=DuHJSuzJuCPOxvVpM2xZR5WtUfR4tqxM
-spring.security.oauth2.client.registration.keycloak.scope=openid,profile,email
-spring.security.oauth2.client.registration.keycloak.authorization-grant-type=authorization_code
-spring.security.oauth2.client.registration.keycloak.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
-
-# Provider now points to localhost realm issuer
 spring.security.oauth2.client.provider.keycloak.issuer-uri=http://localhost:8083/realms/fnd
 spring.security.oauth2.client.provider.keycloak.user-name-attribute=preferred_username
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8083/realms/fnd
 
+logging.level.org.springframework.data.rest=DEBUG
+logging.level.org.springframework.web.servlet.mvc.method.annotation=DEBUG
 
 
 
