--- a/k8s/foodndeliv.yaml
+++ b/k8s/foodndeliv.yaml
@@ -2,45 +2,39 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: foodndeliv
+  namespace: fnd
 spec:
-  replicas: 2
-  selector: { matchLabels: { app: foodndeliv } }
+  replicas: 1
+  selector:
+    matchLabels:
+      app: foodndeliv
   template:
-    metadata: { labels: { app: foodndeliv } }
+    metadata:
+      labels:
+        app: foodndeliv
     spec:
       containers:
         - name: foodndeliv
-          image: bradleytabone23/foodndeliv:task2b
-          imagePullPolicy: IfNotPresent
-          ports: [ { containerPort: 8080 } ]
+          image: bradleytabone23/foodndeliv:task2
+          ports:
+            - containerPort: 8080
           envFrom:
-            - configMapRef: { name: db-config }
-            - secretRef:    { name: db-app-secret }
-            - secretRef:    { name: iam-secret }
-          readinessProbe:
-            httpGet:
-              path: /api
-              port: 8080
-            initialDelaySeconds: 10
-            periodSeconds: 5
-            failureThreshold: 6
-          livenessProbe:
-            httpGet:
-              path: /api
-              port: 8080
-            initialDelaySeconds: 30
-            periodSeconds: 10
-            failureThreshold: 35
+            - secretRef:
+                name: db-app-secret
+            - configMapRef:
+                name: db-config
+            - secretRef:
+                name: iam-secret
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: foodndeliv
+  namespace: fnd
 spec:
-  type: NodePort
-  selector: { app: foodndeliv }
+  selector:
+    app: foodndeliv
   ports:
-    - name: http
-      port: 8080
+    - port: 8080
       targetPort: 8080
-      nodePort: 30080
+  type: NodePort
