--- a/k8s/iam-secret.yaml
+++ b/k8s/iam-secret.yaml
@@ -5,9 +5,10 @@ metadata:
   namespace: fnd
 type: Opaque
 stringData:
-  IAM_HOST: my-keycloak
-  IAM_PORT: "80"
-  IAM_REALM: master          # admin-cli is only in master
-  IAM_CLIENT: admin-cli
-  IAM_CLIENT_SECRET: ""      # admin-cli is a public client
-  IAM_PASSWORD: "adminpass"  # <-- the master admin password
+  IAM_CLIENT: foodndeliv-api
+  IAM_CLIENT_SECRET: LGMw1izQHxxxCO82En83idRAImLtdWDt
+  IAM_HOST: keycloak
+  IAM_PORT: "8080"
+  IAM_REALM: fnd
+  IAM_USERNAME: admin
+  IAM_PASSWORD: adminpass
