--- a/k8s/foodndeliv.yaml
+++ b/k8s/foodndeliv.yaml
@@ -20,11 +20,23 @@ spec:
             - containerPort: 8080
           envFrom:
             - secretRef:
-                name: db-app-secret
+                name: db-app-secret   # DB username + password
             - configMapRef:
-                name: db-config
+                name: db-config       # DB host + port + dbname
             - secretRef:
-                name: iam-secret
+                name: iam-secret      # Keycloak integration
+          readinessProbe:             # ensures pod is ready before traffic
+            httpGet:
+              path: /actuator/health
+              port: 8080
+            initialDelaySeconds: 10
+            periodSeconds: 5
+          livenessProbe:              # restarts container if it gets stuck
+            httpGet:
+              path: /actuator/health
+              port: 8080
+            initialDelaySeconds: 30
+            periodSeconds: 10
 ---
 apiVersion: v1
 kind: Service
@@ -35,6 +47,7 @@ spec:
   selector:
     app: foodndeliv
   ports:
-    - port: 8080
-      targetPort: 8080
-  type: NodePort
+    - port: 8280        # exposed service port
+      targetPort: 8080  # container port
+      protocol: TCP
+  type: LoadBalancer
